[tool.poetry]
name = "yippi-dl"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncclick = "^7.0.9"
yippi = {git = "https://github.com/rorre/yippi.git"}

[tool.poetry.scripts]
yippi-dl = 'yippi_dl.__main__:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
